cmake_minimum_required(VERSION 3.20)
project(sem5-advanced-cpp)

set(CMAKE_CXX_STANDARD 23)

#add_executable(sem5-advanced-cpp lab_1/main.cpp lab_1/task_2/Animal.hpp lab_1/task_2/Animal.cpp lab_1/task_2/Dog.hpp lab_1/task_2/Dog.cpp lab_1/task_2/Cat.hpp lab_1/minimalElement/Cat.cpp)
#add_executable(sem5-advanced-cpp lab_2/main.cpp lab_2/task_2/Employee.cpp lab_2/task_2/Employee.hpp lab_2/task_2/Developer.cpp lab_2/task_2/Developer.hpp lab_2/minimalElement/TeamLeader.cpp lab_2/task_2/TeamLeader.hpp lab_2/task_3/Buffer.cpp lab_2/task_3/Buffer.hpp lab_2/task_3/MeanBuffer.cpp lab_2/task_3/MeanBuffer.hpp lab_2/task_3/MaxBuffer.cpp lab_2/task_3/MaxBuffer.hpp)
#add_executable(sem5-advanced-cpp lab_3/main.cpp lab_3/task_3.hpp lab_3/task_1/Adding.hpp lab_3/task_1/Student.hpp)
#add_executable(sem5-advanced-cpp lab_4/main.cpp lab_4/task_3/Citizen.cpp lab_4/task_3/Citizen.hpp lab_4/task_3/City.cpp lab_4/task_3/City.hpp)
add_executable(sem5-advanced-cpp lab_5/main.cpp)